--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.9.5",
     "react": "^17.0.1",
     "react-admin": "^3.9.5",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4",
-    "express": "^4.17.1",
-    "path": "^0.12.7"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "prod": "HTTPS=true node ./server.js",
