--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "prod": "HTTPS=true node ./server.js",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096  build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
